--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# Logs
-logs
+# Dependencies
+/node_modules
+
+# Build artifacts
+/dist
+/build
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Log files
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# IDE/Editor directories
+.vscode/
+.idea/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS-specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
