--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_SUPABASE_URL="https://eqabifvvdxzphrurbkzc.supabase.co"
-VITE_SUPABASE_KEY="sb_publishable_2DkdX9TefgSKXUSuVUVm6w_Zv9NkyZw"
+VITE_SUPABASE_PUBLISHABLE_KEY="sb_publishable_2DkdX9TefgSKXUSuVUVm6w_Zv9NkyZw"
